[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/DefaultFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://images/StarEmpty.png" type="Texture" id=3]
[ext_resource path="res://fonts/SmallFont.tres" type="DynamicFont" id=4]

[node name="PauseMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 600 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -330.0
margin_right = 200.0
margin_bottom = 270.0
rect_min_size = Vector2( 400, 600 )
color = Color( 0, 0.0196078, 0.184314, 0.862745 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -120.0
margin_right = 200.0
margin_bottom = 120.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 10

[node name="LevelCompleteLabel" type="Label" parent="VBox"]
visible = false
margin_left = 50.0
margin_right = 350.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
autowrap = true

[node name="TipLabel" type="Label" parent="VBox"]
visible = false
margin_left = 50.0
margin_right = 350.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
autowrap = true

[node name="Stars" type="CenterContainer" parent="VBox"]
visible = false
margin_top = 37.0
margin_right = 200.0
margin_bottom = 67.0

[node name="Stars" type="HBoxContainer" parent="VBox/Stars"]
margin_left = 51.0
margin_right = 149.0
margin_bottom = 30.0

[node name="Star1" type="TextureRect" parent="VBox/Stars/Stars"]
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="Star2" type="TextureRect" parent="VBox/Stars/Stars"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="Star3" type="TextureRect" parent="VBox/Stars/Stars"]
margin_left = 68.0
margin_right = 98.0
margin_bottom = 30.0
texture = ExtResource( 3 )

[node name="StarsTip" type="Label" parent="VBox"]
visible = false
margin_left = 50.0
margin_right = 350.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
autowrap = true

[node name="NextButton" type="Button" parent="VBox"]
visible = false
margin_left = 100.0
margin_top = 110.0
margin_right = 300.0
margin_bottom = 170.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "Next Level"

[node name="UpgradeButton" type="Button" parent="VBox"]
visible = false
margin_left = 100.0
margin_top = 110.0
margin_right = 300.0
margin_bottom = 170.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "Rocket Upgrades"

[node name="UnpauseButton" type="Button" parent="VBox"]
margin_left = 100.0
margin_right = 300.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "Unpause"

[node name="RestartButton" type="Button" parent="VBox"]
margin_left = 100.0
margin_top = 70.0
margin_right = 300.0
margin_bottom = 130.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "Replay Level"

[node name="QuitButton" type="Button" parent="VBox"]
margin_left = 100.0
margin_top = 140.0
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "Back to Menu"
[connection signal="pressed" from="VBox/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="VBox/UpgradeButton" to="." method="_on_UpgradeButton_pressed"]
[connection signal="pressed" from="VBox/UnpauseButton" to="." method="_on_UnpauseButton_pressed"]
[connection signal="pressed" from="VBox/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBox/QuitButton" to="." method="_on_QuitButton_pressed"]
